--- a/LocationTracker/Base.lproj/Main.storyboard
+++ b/LocationTracker/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1112" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,27 +17,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tOc-vy-iFZ">
-                                <rect key="frame" x="131" y="67" width="33" height="30"/>
-                                <state key="normal" title="Stuff">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="303007" translatesAutoresizingMaskIntoConstraints="NO" id="8fQ-zY-V0U">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KKZ-gy-VSI">
+                                <rect key="frame" x="128" y="70" width="162" height="38"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
+                                <state key="normal" title="Send Location">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="displayCoordinates:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BCo-lS-FVs"/>
+                                    <action selector="displayCoordinates:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Srf-fj-rp8"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location Saved!!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aa1-pB-iZu">
+                                <rect key="frame" x="135" y="138" width="155" height="21"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="16"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aa1-pB-iZu" firstAttribute="top" secondItem="KKZ-gy-VSI" secondAttribute="bottom" constant="30" id="CVO-3n-lev"/>
+                            <constraint firstItem="KKZ-gy-VSI" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="GYo-Fv-pj2"/>
+                            <constraint firstAttribute="trailing" secondItem="8fQ-zY-V0U" secondAttribute="trailing" id="g1J-mV-qve"/>
+                            <constraint firstItem="8fQ-zY-V0U" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="iU5-kC-alz"/>
+                            <constraint firstAttribute="trailing" secondItem="aa1-pB-iZu" secondAttribute="trailing" constant="30" id="jFH-un-jKq"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="8fQ-zY-V0U" secondAttribute="bottom" id="l8o-8H-WgC"/>
+                            <constraint firstItem="8fQ-zY-V0U" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="o1a-9V-JsO"/>
+                            <constraint firstAttribute="trailing" secondItem="KKZ-gy-VSI" secondAttribute="trailing" constant="30" id="vPq-Ps-d4s"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="actionLabel" destination="aa1-pB-iZu" id="hud-cG-Dco"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="162.66666666666666" y="350.26666666666665"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
+    <resources>
+        <image name="303007" width="1080" height="1920"/>
+    </resources>
 </document>
